# lenguajes-tarea-2

./: Makefile  laboratorio2.cabal
app/: Env.hs  Main.hs  ParCPP.hs  TestCPP.hs  TestSuite.hs  TypeChecker.hs
samples/: Env-sample.hs  TypeChecker-sample.hs
