cabal-version:      2.4
name:               laboratorio2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE

-- The package author(s).
-- author:
maintainer:         ecopello@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lab2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: TypeChecker,
                   Env,
                   AbsCPP,
                   ErrM,
                   LexCPP,
                   ParCPP,
                   PrintCPP,
                   SkelCPP,
                   TestCPP
                   
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      array,
                      containers,
                      directory,
                      process
                      
    hs-source-dirs:   app

    default-language: Haskell2010

executable test-suite
    main-is:          TestSuite.hs

    other-modules: TypeChecker,
                   Env,
                   AbsCPP,
                   ErrM,
                   LexCPP,
                   ParCPP,
                   PrintCPP,
                   SkelCPP
                   
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      array,
                      containers,
                      directory,
                      process
                      
    hs-source-dirs:   app

    default-language: Haskell2010
    